--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 		}
 
 		.slide:nth-child(1) {
-			background-image: url("image1.jpg");
+			background-image: url("https://faonline.in/25ann/image1.JPG");
 			animation-delay: 0s;
 		}
 		.slide:nth-child(2) {
-			background-image: url("image2.jpg");
+			background-image: url("https://faonline.in/25ann/image2.JPG");
 			animation-delay: 10s;
 		}
 		.slide:nth-child(3) {
-			background-image: url("image3.jpg");
+			background-image: url("https://faonline.in/25ann/image3.JPG");
 			animation-delay: 20s;
 		}
 
